# fantasy-recommender

./: README.md  pyproject.toml
.viz/: stats.json
conf/base/: catalog.yml  parameters_data_science.yml  parameters_inference.yml  parameters_preprocessing.yml
mlflow-dockerfile/: Dockerfile
notebooks/: main.ipynb  project_card.ipynb
src/fantasy/: __init__.py  __main__.py  settings.py
src/fantasy/pipelines/data_science/: nodes.py  pipeline.py
src/fantasy/pipelines/inference/: __init__.py  nodes.py  pipeline.py
src/fantasy/pipelines/preprocessing/: __init__.py  nodes.py  pipeline.py
tests/pipelines/inference/: test_pipeline.py
tests/pipelines/preprocessing/: test_pipeline.py
